feat: add organisation nav links in sidebar

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+
+:root [data-theme='wintry'] {
+	--theme-rounded-base: 8px;
+
+}
+
+.btn-filled-primary {
+    @apply font-bold bg-[#1D4ED8] text-[#FFFFFF];
+}
+
