feat: add trainings page

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,13 +3,22 @@
 @tailwind utilities;
 @tailwind variants;
 
-
 :root [data-theme='wintry'] {
 	--theme-rounded-base: 8px;
-
 }
 
 .btn-filled-primary {
-    @apply font-bold bg-[#1D4ED8] text-[#FFFFFF];
+	@apply font-bold bg-[#1D4ED8] text-[#FFFFFF];
 }
+
+.input {
+	border: none;
+}
+
+
+
+
+
+
+
 
