--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,22 +3,94 @@
 @tailwind utilities;
 @tailwind variants;
 
+/* change default border radius */
 :root [data-theme='wintry'] {
 	--theme-rounded-base: 8px;
+}
+
+.variant-filled-primary {
+	color: #1d4ed8 !important;
+}
+
+.variant-filled {
+	background-color: white !important;
+	color: #6b7280 !important;
 }
 
 .btn-filled-primary {
 	@apply font-bold bg-[#1D4ED8] text-[#FFFFFF];
 }
 
+/* Input Styles */
 .input {
-	border: none;
+	@apply border-none font-medium;
 }
 
+/* Select Styles */
+.select {
+	border: none;
+	background-color: #ffffff !important;
+	@apply font-medium;
+}
+option {
+	background-color: #ffffff !important;
+}
 
+/* Table Styles */
+.table {
+	width: 100%;
+	table-layout: auto;
+	overflow: hidden;
+	background-color: rgb(var(--color-surface-100));
+	border-radius: var(--theme-rounded-container);
+	display: table;
+}
+.dark .table {
+	background-color: #ffffff;	
+}
+.table thead {
+	border-bottom-width: 1px;
+	border-color: #e6e7eb;
+	background-color: rgb(var(--color-surface-200));
+	color:#6B7280 !important;
 
+}
+.dark .table thead {
+	background-color: #f1f5f9;
+}
+.table tbody tr {
+	border-bottom-width: 1px;
+	border-color: #e6e7eb;
+}
+.table tbody tr:nth-child(even) {
+	background-color: #ffffff;
+}
+.table tbody td {
+    white-space: nowrap;
+    padding-left: 0.75rem /* 12px */;
+    padding-right: 0.75rem /* 12px */;
+    padding-top: 1rem /* 16px */;
+    padding-bottom: 1rem /* 16px */;
+    vertical-align: top;
+    font-size: 0.875rem /* 14px */;
+    line-height: 1.25rem /* 20px */;
+	@apply font-medium !important;
+}
+.table tbody td:last-child{
+	@apply flex items-center justify-start !important;
+}
+.table tbody td:last-child span{
+	@apply p-2 bg-[#DBEAFE] rounded-full text-primary-700 text-center text-xs font-medium !important
+}
 
-
+/* Pagination hover style */
+.hover\:variant-soft-primary:hover {
+    @apply bg-gray-400 !important;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color) !important;
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color) !important;
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000) !important;
+    color: rgb(var(--color-primary-700));
+}
 
 
 
